Agregar análisis SAST

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,6 @@ name: CI Pipeline
 on:
   push:
     branches:
-      - main
       - feature/devsecops-movies-pipeline-rodrigoorellana
 
 jobs:
@@ -24,3 +23,68 @@ jobs:
 
     - name: Run build
       run: yarn build
+
+  sast:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '16'
+
+    - name: Install dependencies
+      run: yarn install
+
+    - name: Install sonar-scanner
+      run: |
+        curl -Lo sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.2.2472-linux.zip
+        unzip sonar-scanner.zip
+        mv sonar-scanner-4.6.2.2472-linux sonar-scanner
+        export PATH=$PATH:$(pwd)/sonar-scanner/bin
+
+    - name: Build project
+      run: yarn build
+
+    - name: Validate project on SonarCloud
+      id: validateProjectOnSonar
+      run: |
+        set +e
+        curl -f -X POST -u '${{ secrets.SONAR_TOKEN }}:' 'https://sonarcloud.io/api/projects/create' -d 'name=${{ github.event.repository.name }}' -d 'project=${{ github.event.repository.name }}' -d 'organization=devops-v7' -d 'visibility=public'
+        if [ $? -ne 0 ]
+        then
+          echo "Project already exists on SonarCloud"
+        else
+          echo "Project ${{ github.event.repository.name }} was successfully created on SonarCloud"
+          echo "Setting main branch as default"
+          curl -X POST -u '${{ secrets.SONAR_TOKEN }}:' 'https://sonarcloud.io/api/project_branches/rename' -d 'name=main'  -d 'project=${{ github.event.repository.name }}'
+        fi
+
+    - name: Run SonarQube analysis
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      run: |
+        sonar-scanner/bin/sonar-scanner \
+        -Dsonar.projectKey=${{ github.event.repository.name }} \
+        -Dsonar.organization=devops-v7 \
+        -Dsonar.host.url=https://sonarcloud.io \
+        -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
+        -Dsonar.branch.name=${{ github.ref_name }}
+
+    - name: Validate Quality Gate
+      run: |
+        idanalisis=$(curl -s -u '${{ secrets.SONAR_TOKEN }}:' 'https://sonarcloud.io/api/ce/component?component=${{ github.event.repository.name }}')
+        idanalisisParse=$(echo "$idanalisis" | jq .current.analysisId | sed -e 's/^"//' -e 's/"$//')
+
+        qualitygate=$(curl -s -u '${{ secrets.SONAR_TOKEN }}:' 'https://sonarcloud.io/api/qualitygates/project_status?analysisId=$idanalisisParse')
+        qualitygateStatus=$(echo "$qualitygate" | jq .projectStatus.status | sed -e 's/^"//' -e 's/"$//')
+
+        if [ "$qualitygateStatus" == "OK" ]; then
+          echo "Project passes the quality gate"
+          exit 0
+        else
+          echo "Project does not pass the quality gate"
+          exit 1
