--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,6 @@ jobs:
     - name: Run build
       run: yarn build
 
-    - name: Run tests
-      run: yarn test
-
   sast:
     runs-on: ubuntu-latest
 
@@ -58,24 +55,21 @@ jobs:
     - name: Build project
       run: yarn build
 
-    - name: Run tests and generate coverage
-      run: yarn test
-
     - name: Run SonarQube analysis
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         JAVA_HOME: /opt/hostedtoolcache/Java_Adopt_jdk/17.0.1-12/x64
       run: |
         sonar-scanner/bin/sonar-scanner \
-        -Dsonar.projectKey=${{ github.event.repository.name }} \
-        -Dsonar.organization=your_organization \
+        -Dsonar.projectKey=devops-v7_Laboratorio-final \
+        -Dsonar.organization=devops-v7 \
         -Dsonar.host.url=https://sonarcloud.io \
         -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
         -Dsonar.branch.name=${{ github.ref_name }}
 
     - name: Validate Quality Gate
       run: |
-        idanalisis=$(curl -s -u '${{ secrets.SONAR_TOKEN }}:' 'https://sonarcloud.io/api/ce/component?component=${{ github.event.repository.name }}')
+        idanalisis=$(curl -s -u '${{ secrets.SONAR_TOKEN }}:' 'https://sonarcloud.io/api/ce/component?component=devops-v7_Laboratorio-final')
         idanalisisParse=$(echo "$idanalisis" | jq .current.analysisId | sed -e 's/^"//' -e 's/"$//')
 
         qualitygate=$(curl -s -u '${{ secrets.SONAR_TOKEN }}:' 'https://sonarcloud.io/api/qualitygates/project_status?analysisId=$idanalisisParse')
