--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,26 +25,35 @@ jobs:
       run: yarn build
 
   sast:
+    needs: build
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '16'
-
-    - name: Install dependencies
-      run: yarn install
-
     - name: Set up JDK 17
       uses: actions/setup-java@v2
       with:
         java-version: '17'
         distribution: 'adopt'
-        check-latest: true
+
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Install dependencies
+      run: yarn install
+
+    - name: Validate project on SonarCloud
+      id: validateProjectOnSonar
+      run: |
+        set +e
+        curl -f -X POST -u '${{ secrets.SONAR_TOKEN }}:' 'https://sonarcloud.io/api/projects/create' -d 'name=${{ github.event.repository.name }}' -d 'project=${{ github.event.repository.name }}' -d 'organization=devops-v7' -d 'visibility=public'
+        if [ $? -ne 0 ]
+        then
+          echo "Project already exists on SonarCloud"
+        else
+          echo "Project ${{ github.event.repository.name }} was successfully created on SonarCloud"
+          echo "Setting main branch as default"
+          curl -X POST -u '${{ secrets.SONAR_TOKEN }}:' 'https://sonarcloud.io/api/project_branches/rename' -d 'name=main' -d 'project=${{ github.event.repository.name }}'
+        fi
 
     - name: Install sonar-scanner
       run: |
@@ -60,6 +69,7 @@ jobs:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         JAVA_HOME: /opt/hostedtoolcache/Java_Adopt_jdk/17.0.1-12/x64
       run: |
+        export PATH=$JAVA_HOME/bin:$PATH
         sonar-scanner/bin/sonar-scanner \
         -Dsonar.projectKey=devops-v7_Laboratorio-final \
         -Dsonar.organization=devops-v7 \
