Usar npx sonar-scanner en el pipeline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,10 +30,10 @@ jobs:
 
     steps:
     - name: Set up JDK 17
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
-        java-version: '17'
         distribution: 'adopt'
+        java-version: '17'
 
     - name: Checkout code
       uses: actions/checkout@v2
@@ -57,25 +57,22 @@ jobs:
 
     - name: Install sonar-scanner
       run: |
-        curl -Lo sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.2.2472-linux.zip
-        unzip sonar-scanner.zip
-        mv sonar-scanner-4.6.2.2472-linux sonar-scanner
+        yarn add global sonar-scanner
 
     - name: Build project
       run: yarn build
 
-    - name: Run SonarQube analysis
+    - name: Run SonarCloud analysis
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        JAVA_HOME: /opt/hostedtoolcache/Java_Adopt_jdk/17.0.1-12/x64
       run: |
-        export PATH=$JAVA_HOME/bin:$PATH
-        sonar-scanner/bin/sonar-scanner \
-        -Dsonar.projectKey=devops-v7_Laboratorio-final \
-        -Dsonar.organization=devops-v7 \
-        -Dsonar.host.url=https://sonarcloud.io \
-        -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
-        -Dsonar.branch.name=${{ github.ref_name }}
+        npx sonar-scanner \
+          -Dsonar.projectKey=devops-v7_Laboratorio-final \
+          -Dsonar.organization=devops-v7 \
+          -Dsonar.sources=. \
+          -Dsonar.host.url=https://sonarcloud.io \
+          -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
+          -Dsonar.branch.name=${{ github.ref_name }}
 
     - name: Validate Quality Gate
       run: |
