--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,18 +41,23 @@ jobs:
     - name: Install dependencies
       run: yarn install
 
-    - name: Validate project on SonarCloud
+    - name: Validando existencia de proyecto en SonarCloud
       id: validateProjectOnSonar
       run: |
+        #pwd
+        #ls -R
         set +e
-        response=$(curl -s -o /dev/null -w "%{http_code}" -X POST -u '${{ secrets.SONAR_TOKEN }}:' 'https://sonarcloud.io/api/projects/create' -d 'name=${{ github.event.repository.name }}' -d 'project=${{ github.event.repository.name }}' -d 'organization=devops-v7' -d 'visibility=public')
-        if [ "$response" -ne 200 ]; then
-          echo "Project already exists on SonarCloud or failed to create"
+        curl -f -X POST -u '${{ secrets.SONAR_TOKEN }}:' 'https://sonarcloud.io/api/projects/create' -d 'name=${{ github.event.repository.name }}' -d 'project=${{ github.event.repository.name }}' -d 'organization=devops-v7' -d 'visibility=public'
+        if [ $? -ne 0 ]; then
+          echo "Proyecto ya existe en Sonarcloud"
+          echo "::set-output name=proyectoExiste::1"
         else
-          echo "Project ${{ github.event.repository.name }} was successfully created on SonarCloud"
-          echo "Setting main branch as default"
+          echo "Proyecto ${{ github.event.repository.name }} creado exitosamente en Sonarcloud"
+          
+          echo "Se establece rama main como rama por defecto"
           curl -X POST -u '${{ secrets.SONAR_TOKEN }}:' 'https://sonarcloud.io/api/project_branches/rename' -d 'name=main' -d 'project=${{ github.event.repository.name }}'
         fi
+        set -e
 
     - name: Install sonar-scanner
       run: yarn global add sonar-scanner
@@ -65,7 +70,7 @@ jobs:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: |
         npx sonar-scanner \
-          -Dsonar.projectKey=devops-v7_Laboratorio-final \
+          -Dsonar.projectKey=${{ github.event.repository.name }} \
           -Dsonar.organization=devops-v7 \
           -Dsonar.sources=. \
           -Dsonar.host.url=https://sonarcloud.io \
@@ -74,7 +79,7 @@ jobs:
 
     - name: Validate Quality Gate
       run: |
-        idanalisis=$(curl -s -u '${{ secrets.SONAR_TOKEN }}:' 'https://sonarcloud.io/api/ce/component?component=devops-v7_Laboratorio-final')
+        idanalisis=$(curl -s -u '${{ secrets.SONAR_TOKEN }}:' 'https://sonarcloud.io/api/ce/component?component=${{ github.event.repository.name }}')
         idanalisisParse=$(echo "$idanalisis" | jq .current.analysisId | sed -e 's/^"//' -e 's/"$//')
 
         qualitygate=$(curl -s -u '${{ secrets.SONAR_TOKEN }}:' 'https://sonarcloud.io/api/qualitygates/project_status?analysisId=$idanalisisParse')
