no se pudo recuperar el id del analisis agrega debug

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,16 +80,23 @@ jobs:
 
     - name: Validate Quality Gate
       run: |
-        idanalisis=$(curl -s -u '${{ secrets.SONAR_TOKEN }}:' 'https://sonarcloud.io/api/ce/component?component=Laboratorio-final-new' | jq -r '.current.analysisId')
+        echo "Obteniendo ID de análisis"
+        idanalisis=$(curl -s -u '${{ secrets.SONAR_TOKEN }}:' 'https://sonarcloud.io/api/ce/component?component=Laboratorio-final-new')
+        echo "Respuesta de ID de análisis: $idanalisis"
+        idanalisisParse=$(echo "$idanalisis" | jq -r '.current.analysisId')
 
-        if [ -z "$idanalisis" ]; then
+        if [ -z "$idanalisisParse" ]; then
           echo "No se pudo recuperar el ID de análisis"
           exit 1
+        else
+          echo "ID de análisis recuperado: $idanalisisParse"
         fi
 
-        qualitygate=$(curl -s -u '${{ secrets.SONAR_TOKEN }}:' 'https://sonarcloud.io/api/qualitygates/project_status?analysisId=$idanalisis' | jq -r '.projectStatus.status')
+        qualitygate=$(curl -s -u '${{ secrets.SONAR_TOKEN }}:' 'https://sonarcloud.io/api/qualitygates/project_status?analysisId=$idanalisisParse')
+        echo "Respuesta de Quality Gate: $qualitygate"
+        qualitygateStatus=$(echo "$qualitygate" | jq -r '.projectStatus.status')
 
-        if [ "$qualitygate" == "OK" ]; then
+        if [ "$qualitygateStatus" == "OK" ]; then
           echo "El proyecto pasa la puerta de calidad"
           exit 0
         else
