agrega creacion de carpeta reports

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,6 +107,7 @@ jobs:
   SCA:
     needs: sast
     runs-on: ubuntu-latest
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -115,10 +116,13 @@ jobs:
       run: yarn install
 
     - name: Run depcheck for SCA
-      run: npx depcheck --json > reports/depcheck-report.json
+      run: |
+        mkdir -p reports
+        npx depcheck --json > reports/depcheck-report.json
 
     - name: Upload Test result
       uses: actions/upload-artifact@master
       with:
         name: Depcheck report
-        path: ${{github.workspace}}/reports
+        path: reports/depcheck-report.json
+
