install dependency check before using it

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,6 +115,9 @@ jobs:
     - name: Install dependencies
       run: yarn install
 
+    - name: Install depcheck
+      run: npm install depcheck
+
     - name: Run depcheck for SCA
       run: |
         mkdir -p reports
