--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,8 +75,20 @@ jobs:
           -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
           -Dsonar.branch.name=${{ github.ref_name }}
 
-    - name: Sleep to ensure analysis is complete
-      run: sleep 60
+    - name: Wait for analysis to complete
+      run: |
+        status=""
+        analysisId=""
+        while [ "$status" != "SUCCESS" ] && [ "$status" != "FAILED" ]; do
+          sleep 10
+          analysisId=$(curl -s -u '${{ secrets.SONAR_TOKEN }}:' 'https://sonarcloud.io/api/ce/component?component=Laboratorio-final-new' | jq -r '.current.analysisId')
+          status=$(curl -s -u '${{ secrets.SONAR_TOKEN }}:' "https://sonarcloud.io/api/ce/task?id=$analysisId" | jq -r '.task.status')
+          echo "Current status: $status"
+        done
+        if [ "$status" != "SUCCESS" ]; then
+          echo "Analysis failed"
+          exit 1
+        fi
 
     - name: Validate Quality Gate
       run: |
