--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -139,35 +139,44 @@ jobs:
   Dockerbuild:
     needs: SCA
     runs-on: self-hosted
-
-    steps:
+    steps: 
       - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Docker Login
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASS }}
+
+      - name: Download JAR
+        uses: actions/download-artifact@v2
+        with:
+          name: JAR
+          path: build/libs
+
+      - name: List files for debugging
+        run: |
+          ls -l build/libs
 
       - name: Build Docker
         run: |
+          cp build/libs/spring-petclinic-2.6.0.jar .
           docker build --tag roderico/laboratorio-devsecops-final:latest .
 
       - name: Push Docker
-        run: |
+        run: |  
           docker push roderico/laboratorio-devsecops-final:latest
 
   DockerScan:
     needs: Dockerbuild
     runs-on: ubuntu-latest
-
-    steps:
+    steps: 
       - name: Docker Login
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASS }}
 
       - name: Pull de la imagen Docker
         run: |
